# cargo-bloat-backend

./: .env  .gcloudignore  .gitignore  .travis.yml  Cargo.toml  app.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  tasks.py
.chalice/: config.json
.github/: dependabot.yml
.github/workflows/: deploy.yml
migrations/2020-01-05-145958_create_installation_tables/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
