[tool.poetry]
name = "cargo-bloat-backend"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]

packages = [
    { include = "app.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-datastore = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
flask = "^1.1.1"
invoke = "^1.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
