[tool.poetry]
name = "cargo-bloat-backend"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]

packages = [
    { include = "main.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-datastore = "^2.7.0"
simplejson = "^3.17.2"
google-cloud-logging = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flask = "^1.1.2"
invoke = "^1.4.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
